# ----------------------------------------------------------------------------------
# Project: SEES Public
# File: pyproject.toml
# ----------------------------------------------------------------------------------
# Purpose:
# This file is used to specify the project configuration and dependencies.
# ----------------------------------------------------------------------------------
# Author: Christofanis Skordas
#
# Copyright (C) 2025 GSECARS, The University of Chicago, USA
# Copyright (C) 2025 NSF SEES, USA
# ----------------------------------------------------------------------------------

[project]
name = "flask-server"
version = "0.1.0"
authors = [
    {name = "Christofanis Skordas", email = "55315750+skordaschristofanis@users.noreply.github.com"}
]
maintainers = [
    {name = "Christofanis Skordas", email = "55315750+skordaschristofanis@users.noreply.github.com"}
]
description = "SEES Public is a Flask application used to server static pages for DOIs, docs, software, etc., related to SEES"
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
classifiers = [
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License"
]
requires-python = "==3.13.*"
dependencies = [
    "flask>=3.1.1",
    "python-dotenv>=1.1.1",
]

[project.urls]
Homepage = "https://github.com/seescience/public"
Issues = "https://github.com/seescience/public/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["flask_server"]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.12.0",
]

[tool.ruff]
exclude = [
    ".eggs",
    ".git",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".venv",
    ".vscode",
    "build",
    "dist",
]
line-length = 160
indent-width = 4
target-version = "py313"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

